momento/src/commands/database/snapshots/display_database_with_all_fields.snap
---
source: momento/src/commands/database/display.rs
expression: response.to_string()
---
Name: my database
Capacity Pool: my pool
Metrics Config:
- IAM Role: arn:aws:iam::123456789012:my_momento_metrics
- AWS Region: us-east-1
