momento/src/commands/database/snapshots/display_database_with_metrics_disabled.snap
---
source: momento/src/commands/database/display.rs
expression: response.to_string()
---
Name: my database
Capacity Pool: my pool
Metrics Config: disabled
