momento/src/commands/database/snapshots/display_database_with_metrics_without_region.snap
---
source: momento/src/commands/database/display.rs
expression: response.to_string()
---
Name: my database
Capacity Pool: my pool
Metrics Config:
- IAM Role: arn:aws:iam::123456789012:my_momento_metrics
- AWS Region: cell default
